[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name ="HiHelloLib"
version = "0.1.0"
description = "Simple HiHello responder library"
authors = [{name="Oywe", email="ncql@proton.me"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
